Improved Architechture