@@ -9,9 +9,12 @@ import com.smartcampus.erp.repository.EnrollmentRepository;
 import com.smartcampus.erp.repository.StudentProfileRepository;
 import com.smartcampus.erp.service.EnrollmentService;
 import com.smartcampus.erp.service.NotificationService;
+import com.smartcampus.erp.academics.event.StudentEnrolledEvent;
+import org.springframework.context.ApplicationEventPublisher;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
+import java.math.BigDecimal;
 import java.time.LocalDate;
 import java.util.List;
 import java.util.Optional;
@@ -24,27 +27,30 @@ public class EnrollmentServiceImpl implements EnrollmentService {
     private final StudentProfileRepository studentProfileRepository;
     private final CourseRepository courseRepository;
     private final NotificationService notificationService;
+    private final ApplicationEventPublisher eventPublisher;
 
     public EnrollmentServiceImpl(EnrollmentRepository enrollmentRepository,
                                  StudentProfileRepository studentProfileRepository,
                                  CourseRepository courseRepository,
-                                 NotificationService notificationService) {
+                                 NotificationService notificationService,
+                                 ApplicationEventPublisher eventPublisher) {
         this.enrollmentRepository = enrollmentRepository;
         this.studentProfileRepository = studentProfileRepository;
         this.courseRepository = courseRepository;
         this.notificationService = notificationService;
+        this.eventPublisher = eventPublisher;
     }
 
     @Override
     @Transactional
     public EnrollmentResponse enroll(Long studentUserId, Long courseId) {
-        StudentProfile student = studentProfileRepository.findById(studentUserId)
+        var student = studentProfileRepository.findById(studentUserId)
                 .orElseThrow(() -> new ResourceNotFoundException("Student profile not found for user ID: " + studentUserId));
 
-        Course course = courseRepository.findById(courseId)
+        var course = courseRepository.findById(courseId)
                 .orElseThrow(() -> new ResourceNotFoundException("Course not found for ID: " + courseId));
 
-        Optional<Enrollment> existingOpt = enrollmentRepository.findByStudentIdAndCourseId(studentUserId, courseId);
+        var existingOpt = enrollmentRepository.findByStudentIdAndCourseId(studentUserId, courseId);
 
         Enrollment enrollment;
         if (existingOpt.isPresent()) {
@@ -63,11 +69,15 @@ public class EnrollmentServiceImpl implements EnrollmentService {
                     .build();
         }
 
-        Enrollment saved = enrollmentRepository.save(enrollment);
+        var saved = enrollmentRepository.save(enrollment);
 
         // Notify student
-        String msg = String.format("You have successfully enrolled in %s (%s).", course.getTitle(), course.getCode());
+        var msg = String.format("You have successfully enrolled in %s (%s).", course.getTitle(), course.getCode());
         notificationService.createNotification(studentUserId, "Course Enrolled", msg);
+
+        // Publish StudentEnrolledEvent to calculate tuition fee in Billing Domain
+        var feeAmount = BigDecimal.valueOf(course.getCredits() * 500.00);
+        eventPublisher.publishEvent(new StudentEnrolledEvent(studentUserId, feeAmount));
 
         return mapToEnrollmentResponse(saved);
     }
@@ -75,13 +85,13 @@ public class EnrollmentServiceImpl implements EnrollmentService {
     @Override
     @Transactional
     public EnrollmentResponse drop(Long studentUserId, Long courseId) {
-        StudentProfile student = studentProfileRepository.findById(studentUserId)
+        var student = studentProfileRepository.findById(studentUserId)
                 .orElseThrow(() -> new ResourceNotFoundException("Student profile not found for user ID: " + studentUserId));
 
-        Course course = courseRepository.findById(courseId)
+        var course = courseRepository.findById(courseId)
                 .orElseThrow(() -> new ResourceNotFoundException("Course not found for ID: " + courseId));
 
-        Enrollment enrollment = enrollmentRepository.findByStudentIdAndCourseId(studentUserId, courseId)
+        var enrollment = enrollmentRepository.findByStudentIdAndCourseId(studentUserId, courseId)
                 .orElseThrow(() -> new ResourceNotFoundException("Enrollment not found for student and course"));
 
         if (enrollment.getStatus() == EnrollmentStatus.DROPPED) {
@@ -89,10 +99,10 @@ public class EnrollmentServiceImpl implements EnrollmentService {
         }
 
         enrollment.setStatus(EnrollmentStatus.DROPPED);
-        Enrollment saved = enrollmentRepository.save(enrollment);
+        var saved = enrollmentRepository.save(enrollment);
 
         // Notify student
-        String msg = String.format("You have dropped the course %s (%s).", course.getTitle(), course.getCode());
+        var msg = String.format("You have dropped the course %s (%s).", course.getTitle(), course.getCode());
         notificationService.createNotification(studentUserId, "Course Dropped", msg);
 
         return mapToEnrollmentResponse(saved);
@@ -106,7 +116,7 @@ public class EnrollmentServiceImpl implements EnrollmentService {
         }
         return enrollmentRepository.findByStudentId(studentUserId).stream()
                 .map(this::mapToEnrollmentResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
@@ -117,7 +127,7 @@ public class EnrollmentServiceImpl implements EnrollmentService {
         }
         return enrollmentRepository.findByCourseId(courseId).stream()
                 .map(this::mapToEnrollmentResponse)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private EnrollmentResponse mapToEnrollmentResponse(Enrollment enrollment) {
